Fix energy measurement order

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,17 +3,16 @@ name: Energy Aware CI/CD
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:   # optional manual trigger
 
 jobs:
   build-test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
@@ -21,38 +20,29 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # --- START measurement ---
+      # Start energy measurement BEFORE running tests
       - name: Start measurement
         uses: green-coding-berlin/eco-ci-energy-estimation@v3
         with:
           task: start-measurement
 
-      # --- This block is what will be measured ---
-      - name: Run tests (measured)
-        run: |
-          pytest -q
-          echo "tests done"
+      # This is what we want to measure
+      - name: Run tests
+        run: pytest
 
-      # --- GET measurement (must come after measured work) ---
+      # Capture energy results
       - name: Get results
         id: energy
         uses: green-coding-berlin/eco-ci-energy-estimation@v3
         with:
           task: get-measurement
 
-      - name: Print measurement (for debugging)
-        run: |
-          echo "---- MEASUREMENT OUTPUT START ----"
-          echo "${{ steps.energy.outputs.measurement }}"
-          echo "---- MEASUREMENT OUTPUT END ----"
-
       - name: Save eco report
-        run: |
-          printf "%s" "${{ steps.energy.outputs.measurement }}" > eco_report.json
-          echo "Saved eco_report.json (size: $(wc -c < eco_report.json) bytes)"
+        run: echo "${{ steps.energy.outputs.measurement }}" > eco_report.json
 
       - name: Upload eco report artifact
         uses: actions/upload-artifact@v4
         with:
           name: eco-report
           path: eco_report.json
+      
