--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Energy Aware CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   build-test:
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
@@ -20,16 +20,27 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
 
-      # The ONLY correct way to measure energy
-      - name: Run workload with energy measurement
-        id: eco
+      # Step 1: Start measurement
+      - name: Start energy measurement
+        id: start
         uses: green-coding-berlin/eco-ci-energy-estimation@v3
         with:
-          task: run-workload
-          workload-command: pytest
+          task: start-measurement
 
+      # Step 2: Run pytest normally
+      - name: Run tests
+        run: pytest --maxfail=1 --disable-warnings -q
+
+      # Step 3: Get measurement
+      - name: Get energy results
+        id: result
+        uses: green-coding-berlin/eco-ci-energy-estimation@v3
+        with:
+          task: get-measurement
+
+      # Step 4: Save JSON to file
       - name: Save eco report
-        run: echo '${{ steps.eco.outputs.measurement }}' > eco_report.json
+        run: echo '${{ steps.result.outputs.measurement }}' > eco_report.json
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
