--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
         uses: green-coding-berlin/eco-ci-energy-estimation@v3
         with:
           task: start-measurement
+          co2-source: "electricitymaps"
 
       # ─── RUN YOUR TESTS ───────────────────────────────────
       - name: Run tests
@@ -44,6 +45,7 @@ jobs:
         with:
           task: get-measurement
           label: "pytest energy usage"
+          co2-source: "electricitymaps"
 
       # ─── OPTIONAL: display results in job summary ───────────
       - name: Display eco results
