--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,7 @@ jobs:
         uses: green-coding-berlin/eco-ci-energy-estimation@v3
         with:
           task: start-measurement
-          co2-source: "electricitymaps"
-          region: "IN"
-          co2-value: 700
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       # ─── RUN YOUR TESTS ───────────────────────────────────
       - name: Run tests
@@ -47,9 +45,7 @@ jobs:
         with:
           task: get-measurement
           label: "pytest energy usage"
-          co2-source: "electricitymaps"
-          region: "IN"
-          co2-value: 700
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       # ─── OPTIONAL: display results in job summary ───────────
       - name: Display eco results
