--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           task: start-measurement
           send-data: true
+          show-carbon: true
 
       # ─── RUN YOUR TESTS ───────────────────────────────────
       - name: Run tests
@@ -46,6 +47,7 @@ jobs:
           task: get-measurement
           label: "pytest energy usage"
           send-data: true
+          show-carbon: true
 
       # ─── OPTIONAL: display results in job summary ───────────
       - name: Display eco results
